--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               Gabriel Bond
-tagline:             Data Science Bootcamp Guinea Pig
+tagline:             Data Kid
 url:                 http://gab992.github.io
 paginate:            2
 baseurl:             ""
